--- a/literatura.bib
+++ b/literatura.bib
@@ -92,3 +92,16 @@ title = {What Is Web 2.0},
 howpublished = {on-line at: \url{http://www.oreilly.com/pub/a/web2/archive/what-is-web-20.html}},
 }
 
+@Misc{RESP,
+key = {RESP},
+author = {Michael Mullins},
+title = {Effectively respond to a security incident with these five steps},
+howpublished = {on-line at: \url{http://www.techrepublic.com/article/effectively-respond-to-a-security-incident-with-these-five-steps/}},
+}
+
+@Misc{SEC,
+key = {SEC},
+author = {Malkov Saša},
+title = {Bezbednost},
+howpublished = {on-line at: \url{http://poincare.matf.bg.ac.rs/~smalkov/files/is.r271.2016/public/predavanja/IS.cas.2014.08.Bezbednost.pdf}},
+}
